@@ -1,0 +1,45 @@
+########################################################
+# when an LCLS user uses the web portal of experiments to manage standard HDF5
+# translation this is the psana config file that will be used to 
+# pick up any psana configuration that the data management system does not 
+# set directly for translation. Note: this is not the config file for the 
+# online monitoring translator that can be used with multi-calib cycle 
+# experiments, see the file monitoring_translation.cfg for that tool.
+#
+# Users may want to add their own psana modules to the translation. 
+# The web portal of experiments allows users to specify their own release 
+# directory and their own config file for automatic translation. Users are 
+# encourages to make a copy of this config file, modify it, and specify it
+# in the web page.
+#
+# The most important thing to be mindful of when modifying this config file
+# for automatic translation, is to keep Translator.H5Output at the last module 
+# in the psana modules parameter below:
+
+[psana]
+modules = cspad_mod.CsPadCalib Translator.H5Output
+
+# to get calibrated cspad in the translation, keep cspad_mod.CsPadCalib at the
+# beginning of the modules line. Now add any user modules *IN BETWEEN* those two.
+# If user modules come after Translator.H5Output, their output will not be
+# translated.
+
+[Translator.H5Output]
+# here is where you would set any Translator specific options you require.
+# Several Translator.H5Output options cannot be set through the config file
+# as they are controlled through the data management system. The controlled 
+# parameters are:
+#
+# overwrite=
+# output_file=   (based on experiment)
+#
+# See the page https://confluence.slac.stanford.edu/display/PSDM/The+XTC-to-HDF5+Translator
+# for complete documentation on using the Translator. In particular the section
+#
+# https://confluence.slac.stanford.edu/display/PSDM/The+XTC-to-HDF5+Translator#TheXTC-to-HDF5Translator-PsanaConfigurationFileandallOptions
+#
+# includes an expandable widget that gives one all the Translator options.
+
+# address issue with xcsh8215 BldDataSpectrometerV1 during Configure transition:
+
+exclude_config_eventdata=true
