@@ -281,6 +281,21 @@ key_filter = include all
 # the final key string is optional. The three items, type, src, keystring, must be separated by
 # double underscores, i.e: __
 
+# # # # # # # # # # # # # # # # # # # # #
+# EXCLUDE CONFIGURE EVENT DATA
+#
+# this option was put in place to address a problem with a few runs in a particular
+# experiment. Generally you do not need to turn this on. The explanation is as follows. 
+# Usually regular event data does not appear during the configure transition. The 
+# exception is Bld data. Each bld type will get an entry during the configure - more as 
+# a signal that the data is present - the values are not reliable. For this experiment,
+# the BldDataSpectrometerV1 during the Configure transition had a junk number of peaks
+# that caused psana to crash. To address this, one can set the following:
+
+exclude_config_eventdata = false
+
+# to true
+
 # ---------------------------------------
 # SPLIT INTO SEPARTE HDF5 FILES BASED ON CALIB CYCLES
 #
